--- a/tokenizr.net.service/tokenizr.net.service.csproj
+++ b/tokenizr.net.service/tokenizr.net.service.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\tokenizr.net.constants\tokenizr.net.constants.csproj" />
     <ProjectReference Include="..\tokenizr.net.structures\tokenizr.net.structures.csproj" />
   </ItemGroup>
 
