--- a/tokenizr.net.generator.unittests/tokenizr.net.generator.unittests.csproj
+++ b/tokenizr.net.generator.unittests/tokenizr.net.generator.unittests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\tokenizr.net.constants\tokenizr.net.constants.csproj" />
     <ProjectReference Include="..\tokenizr.net.generator\tokenizr.net.generator.csproj" />
     <ProjectReference Include="..\tokenizr.net.structures\tokenizr.net.structures.csproj" />
   </ItemGroup>
