--- a/tokenizr.net.generator/tokenizr.net.generator.csproj
+++ b/tokenizr.net.generator/tokenizr.net.generator.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\tokenizr.net.constants\tokenizr.net.constants.csproj" />
     <ProjectReference Include="..\tokenizr.net.structures\tokenizr.net.structures.csproj" />
   </ItemGroup>
 
