--- a/tokenizr.net/tokenizr.net.csproj
+++ b/tokenizr.net/tokenizr.net.csproj
@@ -13,7 +13,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\tokenizr.net.compression\tokenizr.net.compression.csproj" />
     <ProjectReference Include="..\tokenizr.net.generator\tokenizr.net.generator.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\tokenizr.net.serialisation\tokenizr.net.serialisation.csproj" />
     <ProjectReference Include="..\tokenizr.net.service\tokenizr.net.service.csproj" PrivateAssets="all" />
   </ItemGroup>
 
