--- a/tokenizr.net/tokenizr.net.csproj
+++ b/tokenizr.net/tokenizr.net.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\tokenizr.net.serialisation\tokenizr.net.serialisation.csproj" PrivateAssets="all" />
     <ProjectReference Include="..\tokenizr.net.service\tokenizr.net.service.csproj" PrivateAssets="all" />
     <ProjectReference Include="..\tokenizr.net.structures\tokenizr.net.structures.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\tokenizr.net.unicode\tokenizr.net.unicode.csproj" PrivateAssets="all" />
   </ItemGroup>
 
   <Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
